src/styles/autocomplete.css
/** Project Autocomplete **/
#tag-autocomplete, #project-autocomplete {
  font-size: 14px;
  overflow-y: auto;
  padding: 0 6px;
}

#tag-autocomplete::-webkit-scrollbar-track, .TB__Popdown__content::-webkit-scrollbar-track {
  background: initial !important;
}

#tag-autocomplete {
  /* aligned with filter bar whilst it's the "old" tag design as opposed to a list */
  padding: 0 15px;
}

#project-autocomplete p {
  margin: 0;
  margin-top: 5px;
}

#project-autocomplete li:not(.ws-row):not(.client-row):hover,
#project-autocomplete li.selected-item:not(.ws-row):not(.client-row),
#project-autocomplete p.project-row.selected-item,
#project-autocomplete p:hover {
  cursor: pointer;
  background-color: rgba(0,0,0,.05);
  outline: 0;
}

#project-autocomplete li.selected-project {
  background-color: rgba(74,199,0,.12);
  color: #4bc800!important;
}

#project-autocomplete ul {
  list-style: none;
  padding: 0;
  margin: 0px;
}

#project-autocomplete .ws-row {
  height: 30px;
  line-height: 30px;
  justify-content: center;

  color: black;
  border-bottom: 1px solid #ececec;
  text-align: center;
  cursor: default;
  overflow: hidden;
}

#project-autocomplete .ws-row.hide {
  display: none !important;
}

#project-autocomplete .project-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  overflow: hidden;

  height: 30px;
  border-radius: 8px;
  padding-right: 6px;
  margin-bottom: 2px;
}

#project-autocomplete .project-row > *:first-child {
  flex: 2;
  /* Truncate project names, avoid pushing out the task list */
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

#project-autocomplete .project-row[data-pid='0'] {
  color: #a3a3a3;
}

#project-autocomplete .client-row {
  height: 30px;
  padding: 15px 10px 5px;
  cursor: default;

  color: #7b7b7b;
  font-size: 11px;
  font-weight: 500;
  line-height: 11px;
  text-transform: uppercase;
  letter-spacing: .4px;
}

#project-autocomplete.filtered li,
#tag-autocomplete.filtered li {
  display: none;
}

#project-autocomplete.filtered li.filter,
#tag-autocomplete.filtered li.filter {
  display: flex;
}

#tag-autocomplete li.workspace-filter {
  display: none !important;
}

.client-list.filter .client-row,
.ws-list.filter .ws-row,
.client-list.filter-match li {
  display: block !important;
}

.item-name {
  padding-left: 5px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: #000;
}

/* PROJECT BULLETS */

.tb-project-bullet {
  display: flex;
  align-items: center;
  height: 30px;
}
.tb-project-bullet:before {
  color: inherit;
  display: inline-block;
  margin: 0 7px 1px 10px;
  line-height: 1;

  content: '•';
  font-family: Arial, sans-serif;
  font-weight: 700;
  font-size: 26px;
}

/* TAG AUTOCOMPLETE */

#tag-autocomplete {
  padding-bottom: 6px;
}

#tag-autocomplete .tag-list {
  padding: 0;
  list-style: none;
  margin: 0;
}

#toggl-button-tag-placeholder {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#tag-autocomplete .tag-list li {
  width: 100%;
  max-width: 100%;
  height: 25px;
  line-height: 25px;
  border-radius: 4px;

  padding: 0 5px;
  margin: 5px 0;
  margin-right: 5px;

  font-size: 14px;
  color: #a3a3a3;
  text-overflow: ellipsis;
  overflow: hidden;
  word-wrap: break-word;
}

#tag-autocomplete .tag-list li:hover {
  background-color: rgba(0, 0, 0, 0.05);
  cursor: pointer;
}

#tag-autocomplete .tag-list li.selected-tag {
  background-color: rgba(75, 200, 0, 0.12);
  color: #4bc800;
}

.tag-clear {
  cursor: pointer;
  text-align: right;
  height: 24px;
  line-height: 24px;
  vertical-align: middle;
  padding: 0 5px;
  display: block;
  color: #a6a6a6;
}

.tag-clear:hover {
  opacity: 0.7;
}

#tag-autocomplete .add-new-tag {
  display: none;
  border: solid 1px #ececec;
  font-size: 14px;
  line-height: 1.5;
  padding: 0 5px;
  background-color: rgba(75, 200, 0, 0.12);
  color: #4bc800;
  text-decoration: none;
  text-align: center;
  border-radius: 4px;
  margin-bottom: 2px;
}

#tag-autocomplete .add-new-tag:hover {
  background-color: rgba(75, 200, 0, 0.2);
  cursor: pointer;
}

.open #tag-autocomplete.add-allowed .add-new-tag {
  display: block;
}

.open .add-allowed #toggl-button-project-filter,
.open .add-allowed #toggl-button-tag-filter {
  padding-right: 80px !important;
}

#project-autocomplete .task-count {
  color: #a3a3a3;
  cursor: pointer;
  flex: 1;
  text-align: right;
  user-select: none;
}

#project-autocomplete ul.task-list {
  display: none;
  width: 100%;
}

#project-autocomplete .tasklist-opened ul.task-list {
  background-color: #fafbfc;
  box-shadow: inset 0 1px 0 0 #ececec, inset 0 -1px 0 0 #ececec;
  height: auto;
  display: block;
}

#project-autocomplete .task-item {
  padding-left: 10px;
  color: #000;
  height: 30px;
  line-height: 30px;
}
#project-autocomplete .task-item:hover {
  background-color: hsla(0,0%,69.4%,.07);
}

#project-autocomplete .tasklist-opened {
  height: auto !important;
}

#project-autocomplete .tasklist-opened ul li.task-item {
  display: block;

}

.selected-task {
  background-color: rgba(75, 200, 0, 0.12);
  color: #4bc800;
}

.filtered .tasklist-opened.filter li.task-item {
  display: none;
}

.filtered .tasklist-opened li.task-item.filter {
  display: block !important;
}

